# CTPtest

./: .gitignore  CMakeLists.txt  main.cpp
ctp/: CMakeLists.txt  error.xml  gen_errorcode.py
src/: CMakeLists.txt  CtpErrorCode.cpp  CustomMdSpi.cpp  CustomMdSpi.h  CustomTradeSpi.cpp  CustomTradeSpi.h  StrategyTrade.h  TickToKlineHelper.cpp  TickToKlineHelper.h  main.cpp
